# organizador-cli

./: Cargo.toml  LICENSE  README.md  README.md~  config.toml
src/: main.rs
tests/: cli.rs
